main announcement section are created

--- a/style.css
+++ b/style.css
@@ -5,15 +5,20 @@ body{
     color: rgba(0, 0, 0, 0.87);
 }
 
+a{
+    color: black;
+}
+
 header{
 height: 101px;
+z-index: 10;
+position: relative;
 box-shadow: 0 1px 3px rgb(0 0 0 / 10%), 0 2px 2px rgb(0 0 0 / 6%), 0 0 2px rgb(0 0 0 / 7%);
 }
 
 .header-containar{
     max-width: 1024px;
     margin: 0 auto;
-    background-color: aqua;
     height: 100%;
     display: flex;
     justify-content: space-between;
@@ -69,7 +74,6 @@ box-shadow: 0 1px 3px rgb(0 0 0 / 10%), 0 2px 2px rgb(0 0 0 / 6%), 0 0 2px rgb(0
     margin-right: 20px;
     font-weight: 600;
     display: flex;
-    background-color: rgb(216, 29, 29);
     cursor: pointer;
 }
 
